--- a/software/changelog
+++ b/software/changelog
@@ -1,3 +1,8 @@
-2.0.0: Initial version
-2.0.1: Fix wrong length for GetDebounce packet (through brickletlib)
-2.0.2: Reorder elements in BrickContext to satisfy 256 byte size limit
+2.0.0:
+- Initial version
+
+2.0.1:
+- Fix wrong length for GetDebounce packet (through brickletlib)
+
+2.0.2:
+- Reorder elements in BrickContext to satisfy 256 byte size limit
